# dicom_study_clean

./: .gitignore  Readme.md  enviroment.yml  pyproject.toml  script.py
dcmstudyclean/: RecordStudyInfo.py  StudyImage.py  StudyImageAbstract.py  StudyPipeline.py  script.py
src/: Archive.py  InsertOutput.py  NamingConvention.py  RecordStudyInfo.py  StudyImage.py  StudyImageAbstract.py  StudyPipeline.py
