[tool.poetry]
name = "dcmstudyclean"
version = "0.2.0"
description = "Clean dicom files into folders seperated by study id name and then create json files with key information"
authors = ["ryanapfel <rapfel@usc.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"
pydicom = "^2.3.0"
pandas = "^1.4.3"
click = "^8.1.3"
openpyxl = "^3.0.10"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dcmstudyclean = 'dcmstudyclean.script:cli'